align fix only applies to figure elements

--- a/source/_patterns/06-helpers/_align.scss
+++ b/source/_patterns/06-helpers/_align.scss
@@ -6,6 +6,12 @@
 
 
 /* For align classes, added by drupal to float block elements, add spacing from text */
+figure .align-right {
+  margin-left: 0px;
+}
+figure .align-left {
+  margin-right: 0px;
+}
 .align-center {
   margin-right: auto;
   margin-left: auto;
